<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo_ic">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/register_image"
                android:layout_width="wrap_content"
                android:layout_height="272dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-2dp"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="-7dp"
                android:scaleType="fitStart"
                android:src="@drawable/regimage" />

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:padding="7dp"
                android:text="@string/Register_Title"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:drawableStart="@drawable/email_ic"
                android:drawableLeft="@drawable/email_ic"
                android:hint="@string/Hint_Email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:drawableStart="@drawable/login_psw_ic"
                android:drawableLeft="@drawable/login_psw_ic"
                android:hint="@string/Hint_password"
                android:inputType="textPassword"
                android:padding="10dp" />

            <EditText
                android:id="@+id/re_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:drawableStart="@drawable/login_psw_ic"
                android:drawableLeft="@drawable/login_psw_ic"
                android:hint="@string/Hint_rePassword"
                android:inputType="textPassword"
                android:padding="10dp" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re_register_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/teal_200"
                android:text="@string/Create_Act"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/teal_200" />

            <TextView
                android:id="@+id/register_using"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_button"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="25dp"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/Already_Act"
                android:textAlignment="center"
                android:textColor="@color/purple_700"
                android:textSize="18sp"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>